--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ chardet==3.0.4
 defusedxml==0.5.0
 Django==1.11
 django-allauth==0.36.0
+django-anymail==3.0
 django-bootstrap4==0.0.6
+gunicorn==19.9.0
 idna==2.7
 oauthlib==2.1.0
 psycopg2==2.7.5
@@ -11,4 +13,5 @@ python3-openid==3.1.0
 pytz==2018.5
 requests==2.19.1
 requests-oauthlib==1.0.0
+six==1.11.0
 urllib3==1.23
